test/analyzer/input_programs/invalid_programs/program03.tea
a := 'a'
b := a
c := b

d := 20.1 + c